[package]
name = "ferrotorr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.7"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
sha1 = "0.10.5"
url = { version = "2", features = ["serde"] }
rand = "0.8.5"
hyper-tls = "0.5.0"
percent-encoding = "2.2.0"
byteorder = "1.4.3"
mockito = "0.31.1"
bytes = "1.3.0"
async-trait = "0.1.60"
futures = "0.3.25"
tokio-util = {version = "0.7.4", features= ["codec", "net"] }
