[package]
name = "torrus_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torrus_core = {path = "../torrus_core"}
torrus_storage = {path = "../torrus_storage"}
torrus_tracker = {path = "../torrus_tracker"}
tokio = {version = "1.35.1"}
