[package]
name = "torrus_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.5.0", features = ["serde"] }
reqwest = "0.11.23"
torrus_core = {path = "../torrus_core"}
anyhow = "1"

[dev-dependencies]
tokio = {version = "1.35.1", features = ["full"] }


