[package]
name = "torrusd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torrus = {path = "../torrus"}
clap = { version = "4.4.13", features = ["derive"] }
env_logger = "0.10.1"
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"

